2007-06-22	kaffeetisch

	* t/GtkListStore.t
	* t/GtkTreeStore.t
	* xs/GtkTreeStore.xs: Make sure Gtk2::ListStore's and
	Gtk2::TreeStore's move_before() and move_after() accept undef for
	the position parameter.  Reported by Dave Howorth.

2007-06-18	kaffeetisch

	* Gtk2.pm
	* maps-2.12
	* xs_files-2.12
	* t/GtkBuildable.t
	* t/GtkBuilder.t
	* xs/GtkBuildable.xs
	* xs/GtkBuilder.xs: Add support for GtkBuilder.

2007-06-17	kaffeetisch

	* t/PangoAttributes.t
	* t/PangoContext.t
	* t/PangoFont.t
	* t/PangoGravity.t
	* t/PangoLayout.t
	* t/PangoMatrix.t
	* t/PangoTypes.t
	* xs/PangoAttributes.xs
	* xs/PangoContext.xs
	* xs/PangoFont.xs
	* xs/PangoLayout.xs
	* xs/PangoMatrix.xs
	* xs/PangoTypes.xs: Refer to stable releases in version checks.

	* t/PangoCairo.t
	* xs/PangoCairo.xs: Wrap pango_cairo_context_set_shape_renderer.

	* t/GtkActionGroup.t
	* t/GtkPrintOperation.t: Fix test failures and assertions.

	* t/GtkAboutDialog.t
	* xs/GtkAboutDialog.xs: Respond to the recent deprecation of
	gtk_about_dialog_[sg]et_name and the removal of the "name"
	property: Make [sg]et_program_name the canonical method names for
	all gtk+ versions; warn if the old names are used.  For new gtk+
	versions, map the "name" property to "program-name" and issue a
	warning.  For old gtk+ versions, map "program-name" to "name".  In
	short: always use program-name in Perl code.

2007-06-16	kaffeetisch

	* maps-2.12
	* xs_files-2.12
	* t/GtkScaleButton.t
	* t/GtkVolumeButton.t
	* xs/GtkScaleButton.xs
	* xs/GtkVolumeButton.xs: Add support for GtkScaleButton and
	GtkVolumeButton.

	* maps-2.12
	* xs_files-2.12
	* t/GtkRecentAction.t
	* xs/GtkRecentAction.xs: Add support for GtkRecentAction.

	* t/GdkPixbufLoader.t: Use more adapted size values to test
	load-time scaling in order to avoid test failures due to rounding.

	* t/GtkPageSetup.t
	* xs/GtkPageSetup.xs: Wrap gtk_page_setup_new_from_file,
	gtk_page_setup_to_file, gtk_page_setup_new_from_key_file, and
	gtk_page_setup_to_key_file.
